@@ -1,3 +1,11 @@
+2008-08-10  Wakaba  <wakaba@suika.fam.cx>
+
+	* Output.pm (html_header, start_section): Generate 
+	script elements for tab styling.
+
+	* Result.pm: Link to error list section of transfer-protocol-level
+	errors.
+
 2008-08-02  Wakaba  <wakaba@suika.fam.cx>
 
 	* Output.pm ($htescape_value): New code.  Some methods should
