@@ -1,3 +1,9 @@
+2008-08-10  Wakaba  <wakaba@suika.fam.cx>
+
+	* cc-script.js: Functions for tabbing are added.
+
+	* cc-style.css: Tab styling rules are added.
+
 2008-07-27  Wakaba  <wakaba@suika.fam.cx>
 
 	* .htaccess: Files gone.
